[project]
name = "hw-16"
version = "0.1.0"
description = "hw_16"
authors = [
    {name = "rmg-qa",email = "gorohovikroman123@yandex.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "pytest (>=8.4.2,<9.0.0)",
    "selene (==2.0.0rc9)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pylint (>=4.0.2,<5.0.0)"
]
